API submit_application to run Spark jars and Spark python scripts
